* vm.c (invoke_block_from_c): move call/return event timing for   bmethod. It can invoke inconsistent call event if this call raises   argument error.   [Bug #9959] * vm_insnhelper.c (vm_call_bmethod_body): ditto. * test/ruby/test_settracefunc.rb: add a test.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46464 b2dd03c8-39d4-4d8f-98ff-823fe69b080e